[tool.poetry]
name = "sru-lint"
version = "1.0"
description = "A linter for Ubuntu SRU (Stable Release Update) packages"
authors = ["Dariusz Gadomski <dgadomski@ubuntu.com>"]
readme = "README.md"
license = "MIT"
keywords = ["ubuntu", "sru", "linter", "debian", "packaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.24.0"
unidiff = "^0.7.5"
python-debian = "^1.0.1"
gitpython = "^3.1.46"
launchpadlib = "^2.1.0"
coverage = "^7.10.7"
parse = "^1.20.2"
rich = "^14.2.0"
ruff = "^0.15.0"
keyring = "^25.7.0"
distro-info = "^1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.0"
pre-commit = "^4.0.0"
mypy = "^1.15.0"

[tool.poetry.scripts]
sru-lint = "sru_lint.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["__pycache__", "*.pyc", "tmp", "venv", "dist", "find_emojis_repo.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["sru_lint"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Mypy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests", "__pycache__", "venv", "tmp", "docs"]
